--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit
-requests
-beautifulsoup4
-google-generativeai
-pyperclip
-tldextract
+streamlit>=1.28.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+google-generativeai>=0.3.0
+tldextract>=5.0.0
+pandas>=2.1.0
+reportlab>=4.0.0
+lxml>=4.9.0
+python-whois>=0.9.0
